# Giraffe-immortal

./: .env  .gitignore  LICENSE  README.md  README_en.md  README_zh.md  __main__.py  auto_fusion.py  build_exe.py  config.json  feature_registry.json  giraffe.py  giraffe.spec  giraffe_launcher.py  giraffe_setup.iss  original_readme.md  pyproject.toml  recover.py  sync_script.py
adapt/: __init__.py  adapter.py  compat_report.py  run.py  scanner.py
core/: __init__.py  config.py  credit_monitor.py  skill_reviewer.py  state.py  task_manager.py
data/: memory.db
executor/: __init__.py  agentic_loop.py  circuit_breaker.py  deep_compact.py  deferred_tool_loader.py  micro_compact.py  parallel_executor.py  pipeline.py  progressive_loader.py  response_cache.py  retry.py  side_query.py  skill_loader.py  task_decomposer.py  tool_result_store.py
graph/: __init__.py  checkpoint.py  engine.py  node.py  state.py
integration/: __init__.py  cron_sync.py  event_stream.py  gateway_api.py  hermes_bridge.py  hooks.py  hooks_frontmatter.py  mcp_client.py  mcp_registry.py  multimodal.py  startup.py  web_server.py
memory/: __init__.py  auto_extract.py  claude_md.py  compactor.py  diary.py  memory_refiner.py  memory_system.py  structured_memory.py  vector_store.py
observability/: __init__.py  logging_config.py  stats.py  tracer.py
router/: __init__.py  engine.py  gatekeeper.py  intent_classifier.py  llm_classifier.py  model_aliases.py  model_registry.py  model_validator.py  query_complexity.py  subagent_router.py
sandbox/: __init__.py  executor.py  manager.py
security/: __init__.py  approval.py  guardrail_middleware.py  permission_system.py  token_tracker.py
self_heal/: __init__.py  antibody.py  error_processor.py  evolution.py  fault_playbook.py  skill_crystallizer.py
skills/: __init__.py  loader.py  skill_example.py
swarm/: __init__.py  agent.py  coordinator.py  orchestrator.py  profiles.py
tests/: __init__.py  test_executor.py  test_graph.py  test_integration.py  test_memory.py  test_memory_robust.py  test_observability.py  test_phase2.py  test_router.py  test_security.py  test_self_heal.py  test_selfheal_robust.py  test_skills.py  test_swarm.py
tools/: __init__.py  base.py  bash_tool.py  file_tools.py  search_tools.py  shell_validator.py  (+3 more)
(+9 files in other folders)
